Create base styles

--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -42,7 +42,7 @@ $spacers: (
 
 $main-font: "Montserrat";
 
-$font-weigths: (
+$font-weights: (
     "Regular": 400,
     "Medium": 500,
     "Semibold": 600,
