--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -255,12 +255,64 @@ summary {
   }
 }
 
+.btn {
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
+  min-width: 32px;
+  min-height: 32px;
+  padding: 8px 12px;
+  color: #fafafb;
+  border-radius: 12px;
+  transition-property: background-color color box-shadow;
+  transition-duration: 300ms;
+  transition-timing-function: ease;
+  font: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  margin: 0;
+  overflow: visible;
+  cursor: pointer;
+}
+.btn .btn-inner {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.4285714286;
+  letter-spacing: 0.0357142857em;
+}
+.btn .btn-icon {
+  fill: currentColor;
+}
+
+/* == Primary == */
+.btn--primary {
+  background-color: #F07F2E;
+}
+.btn--primary:active {
+  background-color: #D14A00;
+}
+@media (hover: hover) {
+  .btn--primary:hover, .btn--primary:focus {
+    background-color: #F15C27;
+    box-shadow: 0px 4px 10px 0px rgba(240, 127, 46, 0.25);
+  }
+}
+.btn--primary[disabled] {
+  background-color: #B5B5BE;
+}
+
 .welcome {
   grid-area: welcome;
 }
 
 .co-workers {
   grid-area: co-workers;
+}
+
+.co-workers-btn {
+  display: block;
+  margin: 0 auto;
 }
 
 .tasks {
