Create menu styles

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -145,11 +145,25 @@ meter {
   display: none;
 }
 
+.logo {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.66;
+  letter-spacing: 0.02em;
+}
+
 body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.03em;
+}
+
+.menu-link, .menu-btn {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.43;
+  letter-spacing: 0.04em;
 }
 
 body {
@@ -321,4 +335,118 @@ summary {
 
 .reports {
   grid-area: reports;
+}
+
+.menu-btn {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  margin-right: auto;
+  color: #FAFAFB;
+}
+@media only screen and (min-width: 1200px) {
+  .menu-btn {
+    display: none;
+  }
+}
+.menu-btn-icon {
+  fill: currentColor;
+}
+.sidebar .menu-btn {
+  transition: 600ms ease;
+  transition-property: opacity, transform;
+  transition-delay: 800ms, 600ms;
+  position: absolute;
+  top: 16px;
+  right: -36px;
+  opacity: 0;
+  transform: rotate(180deg);
+}
+.sidebar.is-open .menu-btn {
+  opacity: 1;
+  transform: rotate(0deg);
+}
+
+.menu {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #13131A;
+}
+@media only screen and (max-width: 1199.98px) {
+  .menu {
+    transition: 300ms ease;
+    transition-property: transform;
+    max-width: 248px;
+    transform: translateX(-100%);
+  }
+  .sidebar.is-open .menu {
+    transform: translateX(0);
+    transition-delay: 300ms;
+  }
+}
+
+.menu-list {
+  border-top: 1px solid;
+  border-color: #292932;
+}
+
+.menu-link {
+  transition: 300ms ease;
+  transition-property: color;
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  padding: 16px 20px;
+}
+.menu-link:hover, .menu-link:focus {
+  color: #FAFAFB;
+}
+.menu-link.current {
+  color: #FAFAFB;
+}
+.menu-link.current::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  display: block;
+  width: 4px;
+  height: 32px;
+  border-radius: 0px 100px 100px 0px;
+  background-color: #FAFAFB;
+}
+
+.menu-icon {
+  fill: currentColor;
+}
+
+.menu-notification {
+  margin-left: auto;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px 20px;
+  color: #F07F2E;
+}
+@media only screen and (min-width: 1200px) {
+  .logo {
+    padding: 16px 20px;
+  }
+}
+
+.notification {
+  flex-shrink: 0;
+  display: block;
+  min-width: 28px;
+  height: 20px;
+  padding: 0 10px;
+  color: #FAFAFB;
+  border-radius: 12px;
+  background-color: #FC5A5A;
 }/*# sourceMappingURL=main.css.map */
