--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -152,6 +152,13 @@ meter {
   letter-spacing: 0.02em;
 }
 
+.page-title-accent {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.4;
+  letter-spacing: 0.025em;
+}
+
 body {
   font-size: 16px;
   font-weight: 400;
@@ -318,6 +325,22 @@ summary {
 
 .welcome {
   grid-area: welcome;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  row-gap: 16px;
+}
+
+.page-title-accent {
+  display: block;
+  margin-bottom: 8px;
+  color: #FAFAFB;
+}
+@media only screen and (min-width: 1200px) {
+  .page-title-accent {
+    margin-bottom: 16px;
+  }
 }
 
 .co-workers {
