--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -166,11 +166,35 @@ body {
   letter-spacing: 0.03em;
 }
 
-.search-input, .menu-link, .menu-btn {
+.board-caption, .co-workers-table caption span, .co-workers-title span {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+}
+
+.search-input, .menu-link, .menu-btn, .board-details, .person-caption, .board-tag, .co-workers-table caption, .co-workers-table tbody, .co-workers-details, .co-workers-title {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.43;
   letter-spacing: 0.04em;
+}
+
+.co-workers-table thead th, .co-workers-position, .co-workers-accept {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.43;
+  letter-spacing: 0.04em;
+}
+
+.board-item {
+  padding: 16px;
+  border-radius: 12px;
+}
+@media only screen and (min-width: 1200px) {
+  .board-item {
+    padding: 24px;
+  }
 }
 
 body {
@@ -346,10 +370,324 @@ summary {
 .co-workers {
   grid-area: co-workers;
 }
+@media only screen and (min-width: 1440px) {
+  .co-workers {
+    padding: 20px;
+    border-radius: 12px;
+    background-color: #292932;
+  }
+}
+
+.co-workers-wrapper {
+  max-height: 388px;
+  padding: 16px;
+  margin-bottom: 40px;
+  border-radius: 12px;
+  background-color: #292932;
+}
+@media only screen and (min-width: 1440px) {
+  .co-workers-wrapper {
+    max-height: 400px;
+    padding: 24px;
+    margin-bottom: 32px;
+    background-color: #1C1C24;
+  }
+}
+
+.co-workers-title {
+  margin-bottom: 28px;
+}
+@media only screen and (min-width: 1440px) {
+  .co-workers-title {
+    margin-bottom: 36px;
+  }
+}
+.co-workers-container {
+  max-height: 296px;
+  overflow-y: auto;
+}
+.co-workers-container::-webkit-scrollbar {
+  width: 14px;
+}
+.co-workers-container::-webkit-scrollbar-track {
+  border-radius: 100px;
+  background-color: transparent;
+}
+.co-workers-container::-webkit-scrollbar-track:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.co-workers-container::-webkit-scrollbar-thumb {
+  border: 5px solid transparent;
+  border-radius: 100px;
+  background-color: #B5B5BE;
+  background-clip: content-box;
+}
+.co-workers-container::-webkit-scrollbar-thumb:hover {
+  background-color: #F07F2E;
+}
+@media only screen and (min-width: 1200px) {
+  .co-workers-container {
+    margin-right: -14px;
+  }
+}
+
+.co-workers-board {
+  margin-bottom: 20px;
+}
 
 .co-workers-btn {
   display: block;
   margin: 0 auto;
+}
+
+.co-workers-details {
+  padding: 16px 0;
+}
+@media only screen and (min-width: 768px) {
+  .co-workers-details {
+    display: none;
+  }
+}
+
+.co-workers-data {
+  transition: 600ms ease;
+  transition-property: margin;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.co-workers-details[open] .co-workers-data {
+  margin-bottom: 16px;
+}
+
+.co-workers-icon {
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  border: 1px solid;
+  border-color: #92929D;
+  cursor: pointer;
+}
+.co-workers-icon .plus {
+  transition: 300ms ease;
+  transition-property: opacity;
+  transition-delay: 150ms;
+  opacity: 0;
+  fill: #92929D;
+}
+.co-workers-details:not([open]) .co-workers-icon .plus {
+  opacity: 1;
+}
+.co-workers-icon .minus {
+  transition: 300ms ease;
+  transition-property: opacity;
+  transition-delay: 150ms;
+  opacity: 0;
+  fill: #92929D;
+}
+.co-workers-details[open] .co-workers-icon .minus {
+  opacity: 1;
+}
+
+.co-workers-bio {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.co-workers-bio .thumb {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.co-workers-bio .thumb img {
+  object-fit: cover;
+  object-position: top center;
+}
+
+.co-workers-controls {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.controls-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+}
+.controls-btn-icon.success {
+  fill: #82C43C;
+}
+.controls-btn-icon.error {
+  fill: #FC5A5A;
+}
+
+.co-workers-info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 8px 12px;
+  width: fit-content;
+  padding: 0 32px;
+}
+
+.co-workers-position {
+  color: #FAFAFB;
+}
+
+.co-workers-accept {
+  color: #FAFAFB;
+}
+
+.co-workers-table {
+  width: 100%;
+}
+@media only screen and (max-width: 767.98px) {
+  .co-workers-table {
+    display: none;
+  }
+}
+.co-workers-table caption {
+  margin-bottom: 36px;
+  color: #B5B5BE;
+}
+.co-workers-table thead {
+  position: sticky;
+  top: -1px;
+  z-index: 100;
+  background-color: #292932;
+}
+@media only screen and (min-width: 1440px) {
+  .co-workers-table thead {
+    background-color: #1C1C24;
+  }
+}
+.co-workers-table thead th {
+  position: relative;
+  padding: 12px 20px;
+  border-bottom-width: 1px;
+  color: #FAFAFB;
+}
+.co-workers-table thead th::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #92929D;
+}
+@media only screen and (min-width: 1440px) {
+  .co-workers-table thead th::after {
+    background-color: #292932;
+  }
+}
+.co-workers-table thead th:first-child {
+  text-align: center;
+}
+.co-workers-table tbody {
+  color: #B5B5BE;
+}
+.co-workers-table tbody td {
+  position: relative;
+  padding: 16px 20px;
+  vertical-align: middle;
+  border-bottom-width: 1px;
+}
+.co-workers-table tbody td::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #92929D;
+}
+@media only screen and (min-width: 1440px) {
+  .co-workers-table tbody td::after {
+    background-color: #292932;
+  }
+}
+.co-workers-table .thumb {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto;
+}
+.co-workers-table .thumb img {
+  object-fit: cover;
+  object-position: top center;
+}
+
+.board {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.board-item {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  gap: 43px;
+  background-color: #292932;
+}
+@media only screen and (min-width: 1440px) {
+  .board-item {
+    background-color: #1C1C24;
+  }
+}
+.board-item.hide {
+  display: none;
+}
+
+.board-caption {
+  margin-bottom: 8px;
+  color: #FAFAFB;
+}
+
+.board-details {
+  margin-bottom: 20px;
+  color: #B5B5BE;
+}
+
+.person {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.person-thumb {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.person-thumb img {
+  object-fit: cover;
+  object-position: top center;
+}
+
+.board-right {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.board-tag {
+  margin-bottom: auto;
+  text-align: right;
+  color: #B5B5BE;
 }
 
 .tasks {
