--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -166,14 +166,14 @@ body {
   letter-spacing: 0.03em;
 }
 
-.tasks-title span, .board-caption, .co-workers-table caption span, .co-workers-title span {
+.reports-title span, .tasks-title span, .board-caption, .co-workers-table caption span, .co-workers-title span {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.03em;
 }
 
-.search-input, .menu-link, .menu-btn, .tasks-title, .tasks-heading, .tasks-desc, .board-details, .person-caption, .board-tag, .co-workers-table caption, .co-workers-table tbody, .co-workers-details, .co-workers-title {
+.search-input, .menu-link, .menu-btn, .reports-title, .staff-caption, .tasks-title, .tasks-heading, .tasks-desc, .board-details, .person-caption, .board-tag, .co-workers-table caption, .co-workers-table tbody, .co-workers-details, .co-workers-title {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.43;
@@ -187,12 +187,12 @@ body {
   letter-spacing: 0.04em;
 }
 
-.tasks, .board-item {
+.reports, .tasks, .board-item {
   padding: 16px;
   border-radius: 12px;
 }
 @media only screen and (min-width: 1200px) {
-  .tasks, .board-item {
+  .reports, .tasks, .board-item {
     padding: 24px;
   }
 }
@@ -803,6 +803,139 @@ summary {
 
 .reports {
   grid-area: reports;
+  min-width: 340px;
+  background-color: #292932;
+}
+
+.reports-title {
+  margin-bottom: 36px;
+  color: #B5B5BE;
+}
+.reports-title span {
+  color: #FAFAFB;
+}
+
+.reports-item {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+@media only screen and (min-width: 768px) {
+  .reports-item {
+    gap: 32px;
+  }
+}
+.reports-item:not(:last-child) {
+  margin-bottom: 28px;
+}
+
+.reports-staff {
+  flex-grow: 1;
+  flex-shrink: 0;
+}
+
+.staff {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.staff-thumb {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.staff-thumb img {
+  object-fit: cover;
+  object-position: top center;
+}
+
+.staff-caption {
+  color: #B5B5BE;
+}
+
+.reports-bar {
+  width: calc(100% - 224px);
+  height: 4px;
+}
+.reports-bar[value] {
+  border-radius: 2px;
+}
+[data-status=up] .reports-bar[value] {
+  background-color: rgba(130, 196, 60, 0.3);
+}
+[data-status=up] .reports-bar::-moz-progress-bar {
+  background-color: #82c43c;
+  border-radius: 2px;
+}
+[data-status=up] .reports-bar::-webkit-progress-bar {
+  background-color: rgba(130, 196, 60, 0.3);
+  border-radius: 2px;
+}
+[data-status=up] .reports-bar::-webkit-progress-value {
+  background-color: #82c43c;
+  border-radius: 2px;
+}
+[data-status=dash] .reports-bar[value] {
+  background-color: rgba(164, 97, 216, 0.3);
+}
+[data-status=dash] .reports-bar::-moz-progress-bar {
+  background-color: #a461d8;
+  border-radius: 2px;
+}
+[data-status=dash] .reports-bar::-webkit-progress-bar {
+  background-color: rgba(164, 97, 216, 0.3);
+  border-radius: 2px;
+}
+[data-status=dash] .reports-bar::-webkit-progress-value {
+  background-color: #a461d8;
+  border-radius: 2px;
+}
+[data-status=down] .reports-bar[value] {
+  background-color: rgba(252, 90, 90, 0.3);
+}
+[data-status=down] .reports-bar::-moz-progress-bar {
+  background-color: #fc5a5a;
+  border-radius: 2px;
+}
+[data-status=down] .reports-bar::-webkit-progress-bar {
+  background-color: rgba(252, 90, 90, 0.3);
+  border-radius: 2px;
+}
+[data-status=down] .reports-bar::-webkit-progress-value {
+  background-color: #fc5a5a;
+  border-radius: 2px;
+}
+
+.reports-icon {
+  flex-shrink: 0;
+  width: 20px;
+  height: 20px;
+  padding: 4px;
+  border-radius: 4px;
+}
+.reports-icon use {
+  opacity: 0;
+  fill: #FAFAFB;
+}
+[data-status=up] .reports-icon {
+  background-color: #82C43C;
+}
+[data-status=up] .reports-icon .up {
+  opacity: 1;
+}
+[data-status=dash] .reports-icon {
+  background-color: #A461D8;
+}
+[data-status=dash] .reports-icon .dash {
+  opacity: 1;
+}
+[data-status=down] .reports-icon {
+  background-color: #FC5A5A;
+}
+[data-status=down] .reports-icon .down {
+  opacity: 1;
 }
 
 .menu-btn {
